--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^10.12.21",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
